--- a/app.json
+++ b/app.json
@@ -36,6 +36,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "797e4393-cd0d-406b-89ca-46e1948a57a0"
+      }
     }
   }
 }
