chore: add owner

--- a/app.json
+++ b/app.json
@@ -45,6 +45,7 @@
       "eas": {
         "projectId": "797e4393-cd0d-406b-89ca-46e1948a57a0"
       }
-    }
+    },
+    "owner": "bycedric"
   }
 }
